--- a/css/test.css
+++ b/css/test.css
@@ -6,7 +6,8 @@ body {
     font-size: 20px;
     display: flex;
     border-bottom: 1px solid #000;
-    padding-bottom: 10px;
+    padding: 10px;
+    align-items: center;
 }
 .logo {
     color: lightgreen;
@@ -14,6 +15,7 @@ body {
     font-weight: 700;
     margin-right: 50px;
     text-decoration: none;
+    padding: 5px 15px;
 }
 ul {
     display: flex;
@@ -22,7 +24,7 @@ ul {
     margin: 0;
 }
 ul > li {
-    margin-right: 10px;
+    margin-right: 30px;
 }
 .box {
     display: flex;
@@ -31,14 +33,20 @@ ul > li {
     border-bottom: 1px solid #000;
 }
 .aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+    background-color: lavender;
+    padding: 5px 20px;
+}
+section {
+    background-color: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
 }
 .post {
     padding-bottom: 20px;
 }
 footer {
     font-size: 13px;
+    padding: 0 20px;
 }
 a {
     color: rebeccapurple;
