--- a/css/test.css
+++ b/css/test.css
@@ -22,20 +22,25 @@ ul {
     list-style-type: none;
     padding-left: 0;
     margin: 0;
-}
-ul > li {
-    margin-right: 30px;
+    gap: 30px;
 }
 .box {
     display: flex;
-    margin-bottom: 30px;
     gap: 20px;
     border-bottom: 1px solid #000;
+}
+main {
+    margin: 0px 30px 30px 0;
 }
 .aside {
     background-color: lavender;
     padding: 5px 20px;
 }
+.results {   
+    display: flex;
+    gap: 30px;
+}
+
 section {
     background-color: lavender;
     padding: 5px 20px;
@@ -52,6 +57,14 @@ a {
     color: rebeccapurple;
     font-weight: 700;
     text-decoration: none;
+}
+section a {
+    margin-top: 6px;
+    display: block;
+    text-align: center;
+    background-color: rebeccapurple;
+    color: white;
+    padding: 8px 15px 8px 15px;
 }
 h1, h2, h3 {
     text-transform: uppercase;
